# blossom

./: .gitignore
blossom_api/: .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml
blossom_api/app/: main.py
blossom_api/app/api/: router.py
blossom_api/app/api/routes/: admin.py  ai.py  auth.py  community.py  garden.py  location.py  notifications.py  plants.py  profiles.py
blossom_api/app/core/: config.py  security.py
blossom_api/app/db/: session.py  supabase_client.py
blossom_api/app/schemas/: ai.py  auth.py  community.py  garden.py  location.py  plant.py  profile.py
blossom_api/app/services/: ai_service.py  ai_settings_service.py  community_service.py  garden_service.py  gemini_service.py  location_service.py  plant_flow.py  plant_service.py  profile_service.py  supabase_auth.py  weather_service.py
blossom_api/migrations/: 20260321_0001_initial_schema.sql  20260321_0002_policy_and_index_fixes.sql  20260322_0003_reports_table.sql  20260324_0004_plant_attributes.sql  20260325_0005_countries_states_profile_location.sql  20260325_0006_seed_popular_plants.sql
blossom_app/: README.md  pubspec.yaml
blossom_app/integration_test/: app_test.dart
blossom_app/ios/Runner/: Info.plist  (+1 more)
blossom_app/ios/Runner.xcodeproj/: project.pbxproj
blossom_app/lib/: main.dart
blossom_app/web/: index.html
blossom_dashboard/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
blossom_dashboard/app/: globals.css  layout.tsx
blossom_dashboard/lib/: api.ts  config.ts  supabase.ts  types.ts
(+54 files in other folders)
